[tool.poetry]
name = "super-resolution-pwr-2022"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>", "Jakub Brzoza", "Łukasz Siemański"]

[tool.poetry.dependencies]
python = "^3.9.9"
torch = "^1.11.0"
pytorch-lightning = "^1.5.10"
torchmetrics = "^0.7.3"
torchvision = "^0.12.0"
dvc = {version = "^2.9.5", extras = ["gdrive"]}
Pillow = "^9.1.0"
seaborn = "^0.11.2"
tensorboard = "^2.8.0"
torch-tb-profiler = "^0.4.0"
wandb = "^0.12.15"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipykernel = "^6.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
